Fixed button Spacing

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ body {
     font-size: 1rem;
     transition: background-color 0.3s ease, transform 0.2s ease;
     display: inline-block;
-    margin-top: 1.5rem;
+    margin-top: .5rem;
 }
 
     .buy-button:hover {
@@ -81,7 +81,7 @@ body {
     flex-direction: column;
     gap: .1rem;
     align-items: center;
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 .button-block {
